# MIPT-Cpp-2ndCourse

./: README.md
.github/workflows/: workflow.yml
task1/: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  conanfile.txt  debug_config.cmake  pyproject.toml
task1/include/: cache.hh  cache_2q.hpp  cache_2q.ipp  cache_belady.hpp  cache_belady.ipp  cache_belady2.hpp  cache_impl.hh  utils.hh  utils.hpp
task1/scripts/: build.sh  setup_home.sh  test.sh
task1/src/: main.cc  main.cpp
task1/test/: CMakeLists.txt
task1/test/include/: test_utils.hpp
task1/test/src/: module_tests.cpp  test_cache.cc  test_cache.cpp  test_utils.cc  test_utils.cpp
